force-app/main/default/objects/Opportunity/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AD &amp; RUP Syringe</fullName>
            </value>
            <value>
                <fullName>Alcohol Swabs</fullName>
            </value>
            <value>
                <fullName>Allergy Syringe</fullName>
            </value>
            <value>
                <fullName>Anesthesia Needles</fullName>
            </value>
            <value>
                <fullName>Beard Cover</fullName>
            </value>
            <value>
                <fullName>Blood Collection Holders &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Blood Collection Tube</fullName>
            </value>
            <value>
                <fullName>Blood Pressure Monitors</fullName>
            </value>
            <value>
                <fullName>Blunt Fill Needle &amp; Filter Needle</fullName>
            </value>
            <value>
                <fullName>Blunt Fill Needle Combo</fullName>
            </value>
            <value>
                <fullName>Bouffant Cap</fullName>
            </value>
            <value>
                <fullName>Catheter Dressing</fullName>
            </value>
            <value>
                <fullName>Coverall</fullName>
            </value>
            <value>
                <fullName>Enteral Syringe</fullName>
            </value>
            <value>
                <fullName>Exam Gloves</fullName>
            </value>
            <value>
                <fullName>Face Sheild</fullName>
            </value>
            <value>
                <fullName>Flush Syringe - Saline</fullName>
            </value>
            <value>
                <fullName>Gowns</fullName>
            </value>
            <value>
                <fullName>Heel Blood Lancets</fullName>
            </value>
            <value>
                <fullName>HFNC</fullName>
            </value>
            <value>
                <fullName>Hood</fullName>
            </value>
            <value>
                <fullName>Infusion Accessories</fullName>
            </value>
            <value>
                <fullName>IV Accessories</fullName>
            </value>
            <value>
                <fullName>IV Lines</fullName>
            </value>
            <value>
                <fullName>Lab Coat</fullName>
            </value>
            <value>
                <fullName>Mask</fullName>
            </value>
            <value>
                <fullName>Medical Supplies - Other</fullName>
            </value>
            <value>
                <fullName>Non-Invasive Ventilator</fullName>
            </value>
            <value>
                <fullName>Oral Dispensing</fullName>
            </value>
            <value>
                <fullName>Oral Syringe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>