force-app/main/default/objects/Opportunity/fields/Product_Lines_Amount__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines_Amount__c</fullName>
    <label>Product Lines Amount</label>
    <summarizedField>Product_Line__c.Amount_Number__c</summarizedField>
    <summaryFilterItems>
        <field>Product_Line__c.Research__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Line__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>