force-app/main/default/objects/Opportunity/fields/Product_Lines_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines_Count__c</fullName>
    <label>Product Lines Count</label>
    <summaryFilterItems>
        <field>Product_Line__c.Research__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Line__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>