force-app/main/default/objects/Opportunity/fields/Product_Lines_Probability_Sum__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines_Probability_Sum__c</fullName>
    <label>Product Lines Probability Sum</label>
    <summarizedField>Product_Line__c.Probability__c</summarizedField>
    <summaryFilterItems>
        <field>Product_Line__c.Research__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Line__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>