force-app/main/default/objects/Opportunity/fields/QtdeEntregaPrevista__c.field-meta.xml
<CustomField>
    <fullName>QtdeEntregaPrevista__c</fullName>
    <label>Qtde Entrega Prevista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>