force-app/main/default/objects/Opportunity/fields/QtyOfDeliveries__c.field-meta.xml
<CustomField>
    <fullName>QtyOfDeliveries__c</fullName>
    <formula>CASE
(
text(DeliveryTimeFrame__c ), 
&quot;BiWeekly&quot;, Validade__c /0.5,
&quot;Monthly&quot;,   Validade__c /1, 
&quot;Bimonthly&quot;, Validade__c /2,
&quot;Quarterly&quot;, Validade__c /3,
&quot;Semester&quot;,  Validade__c /6,
Validade__c /12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QtyOfDeliveries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>