force-app/main/default/objects/Opportunity/fields/QuantidadeItensAprovacao__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeItensAprovacao__c</fullName>
    <label>Quantidade itens aprovação</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.NecessitaAprovacao__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>