force-app/main/default/objects/Opportunity/fields/Recurring_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Type__c</fullName>
    <label>Recurring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiply</fullName>
            </value>
            <value>
                <fullName>Divide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>