force-app/main/default/objects/Opportunity/fields/StageBlocked__c.field-meta.xml
<CustomField>
    <fullName>StageBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StageBlocked</label>
    <type>Checkbox</type>
</CustomField>