force-app/main/default/objects/Opportunity/fields/StatusAprovacao__c.field-meta.xml
<CustomField>
    <fullName>StatusAprovacao__c</fullName>
    <label>Status de Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Precisa de Aprovação</fullName>
            </value>
            <value>
                <fullName>Em Aprovação</fullName>
            </value>
            <value>
                <fullName>Esperando por Diretoria Comercial</fullName>
            </value>
            <value>
                <fullName>Esperando por Diretoria Financeira</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>