force-app/main/default/objects/Opportunity/fields/Sync_Products_with_main_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sync_Products_with_main_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dedicated for recurring Opportunity. If checked, any change to Products in main Opportunity is going to be synced to the recurring one.</inlineHelpText>
    <label>Sync Products with main Opportunity</label>
    <type>Checkbox</type>
</CustomField>