force-app/main/default/objects/Opportunity/fields/Target_Convert_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Convert_Date__c</fullName>
    <inlineHelpText>The Target Convert date is when we can expect to see the revenue come in.</inlineHelpText>
    <label>Target Convert Date</label>
    <type>Date</type>
</CustomField>