force-app/main/default/objects/Opportunity/fields/Tender__c.field-meta.xml
<CustomField>
    <fullName>Tender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tender</label>
    <type>Checkbox</type>
</CustomField>