force-app/main/default/objects/Opportunity/fields/ToBeDeleted__c.field-meta.xml
<CustomField>
    <fullName>ToBeDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ToBeDeleted</label>
    <type>Checkbox</type>
</CustomField>