force-app/main/default/objects/Opportunity/fields/Total_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Total_Taxes__c</fullName>
    <label>Total Taxes</label>
    <summarizedField>OpportunityLineItem.Total_Price_With_Tax__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>