force-app/main/default/objects/Opportunity/fields/TotalTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxAmount__c</fullName>
    <label>Total Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>