force-app/main/default/objects/Opportunity/fields/Transportadora__c.field-meta.xml
<CustomField>
    <fullName>Transportadora__c</fullName>
    <label>Transportadora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>