force-app/main/default/objects/Opportunity/fields/UserProfileId__c.field-meta.xml
<CustomField>
    <fullName>UserProfileId__c</fullName>
    <formula>Owner.ProfileId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserProfileId</label>
    <type>Text</type>
</CustomField>