force-app/main/default/objects/Opportunity/fields/Validade__c.field-meta.xml
<CustomField>
    <fullName>Validade__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Number of months for this opportunity</inlineHelpText>
    <label>Validade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>