force-app/main/default/objects/Opportunity/fields/Why_we_lost__c.field-meta.xml
<CustomField>
    <fullName>Why_we_lost__c</fullName>
    <label>Why we lost?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Missing Documents</fullName>
            </value>
            <value>
                <fullName>Project Change</fullName>
            </value>
            <value>
                <fullName>Project Cancelled</fullName>
            </value>
            <value>
                <fullName>Contract Bundling</fullName>
            </value>
            <value>
                <fullName>Timeline</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Inventory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>