force-app/main/default/objects/Opportunity/recordTypes/APAC_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>APAC_Opportunity</fullName>
    <active>true</active>
    <businessProcess>NACA</businessProcess>
    <label>APAC Opportunity</label>
</RecordType>