force-app/main/default/objects/Opportunity/recordTypes/Opportunity_EMEA.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_EMEA</fullName>
    <active>true</active>
    <businessProcess>EMEA</businessProcess>
    <label>EMEA Opportunity</label>
</RecordType>