force-app/main/default/objects/Opportunity/recordTypes/Opportunity_EMEA_LOT.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_EMEA_LOT</fullName>
    <active>true</active>
    <businessProcess>EMEA LOT</businessProcess>
    <label>EMEA Tender LOT</label>
</RecordType>