force-app/main/default/objects/Opportunity/recordTypes/Opportunity_NACA.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_NACA</fullName>
    <active>true</active>
    <businessProcess>NACA</businessProcess>
    <label>NACA Opportunity</label>
</RecordType>