force-app/main/default/objects/Opportunity/recordTypes/Opportunity_Tender_EMEA.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Tender_EMEA</fullName>
    <active>true</active>
    <businessProcess>EMEA Tender</businessProcess>
    <label>EMEA Opportunity Tender</label>
</RecordType>