force-app/main/default/objects/Opportunity/recordTypes/SA_Distribuidor.recordType-meta.xml
<RecordType>
    <fullName>SA_Distribuidor</fullName>
    <active>true</active>
    <businessProcess>Venda Direta</businessProcess>
    <label>Distribuidor</label>
</RecordType>