force-app/main/default/objects/Opportunity/recordTypes/SA_Licitacao_Direta.recordType-meta.xml
<RecordType>
    <fullName>SA_Licitacao_Direta</fullName>
    <active>true</active>
    <businessProcess>Venda Direta</businessProcess>
    <label>BR Licitacao Direta</label>
</RecordType>