force-app/main/default/objects/Opportunity/recordTypes/SA_Licitacao_Indireta.recordType-meta.xml
<RecordType>
    <fullName>SA_Licitacao_Indireta</fullName>
    <active>true</active>
    <businessProcess>Venda Direta</businessProcess>
    <label>Licitacao Indireta</label>
</RecordType>