force-app/main/default/objects/Opportunity/recordTypes/SA_OEM.recordType-meta.xml
<RecordType>
    <fullName>SA_OEM</fullName>
    <active>true</active>
    <businessProcess>Venda Direta</businessProcess>
    <label>OEM</label>
</RecordType>