force-app/main/default/objects/Opportunity/recordTypes/SA_Purchasing_Group.recordType-meta.xml
<RecordType>
    <fullName>SA_Purchasing_Group</fullName>
    <active>true</active>
    <businessProcess>Venda Direta</businessProcess>
    <label>Purchasing Group</label>
</RecordType>