force-app/main/default/objects/Opportunity/recordTypes/SA_VendaDireta.recordType-meta.xml
<RecordType>
    <fullName>SA_VendaDireta</fullName>
    <active>true</active>
    <businessProcess>Venda Direta</businessProcess>
    <label>Venda Direta</label>
</RecordType>