force-app/main/default/objects/Opportunity/recordTypes/Samples.recordType-meta.xml
<RecordType>
    <fullName>Samples</fullName>
    <active>true</active>
    <businessProcess>Samples</businessProcess>
    <label>BR Samples</label>
</RecordType>