force-app/main/default/objects/Opportunity/validationRules/Block_Stage_Change_Without_Activity.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Stage_Change_Without_Activity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Has_Qualified_Activity__c = FALSE,
  OR(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    ISPICKVAL(StageName, &quot;Closed Lost&quot;)
  ),
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 	Region__c &lt;&gt; &quot;Brazil&quot;
)</errorConditionFormula>
    <errorMessage>Please log a customer interaction (Call, Meeting, or Email) on this Opportunity before closing it as Won or Lost.</errorMessage>
</ValidationRule>