force-app/main/default/objects/Opportunity/validationRules/BlockClosedWonSample.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockClosedWonSample</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    NOT(ISPICKVAL(StatusAprovacao__c, &quot;Aprovado&quot;)),
    OR(
        RecordType.DeveloperName = &quot;Distribuidor&quot;,
        RecordType.DeveloperName = &quot;Licitacao_Direta&quot;,
        RecordType.DeveloperName = &quot;Licitacao_Indireta&quot;,
        RecordType.DeveloperName = &quot;OEM&quot;,
        RecordType.DeveloperName = &quot;Purchasing_Group&quot;,
        RecordType.DeveloperName = &quot;VendaDireta&quot;,
        RecordType.DeveloperName = &quot;Samples&quot;
    )
)</errorConditionFormula>
    <errorMessage>Não foi possível fechar a oportunidade pois a aprovação está pendente ou reprovada.</errorMessage>
</ValidationRule>