force-app/main/default/objects/Opportunity/validationRules/CheckApprovalIntegrity.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckApprovalIntegrity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISCHANGED(PrecoListaTotal__c),
        ISCHANGED(Amount)
    ),
    AND(
        TEXT(StatusAprovacao__c) &lt;&gt; &quot;Precisa de Aprovação&quot;,
        NecessitaAprovacao__c = TRUE
    ),
    NOT(ISBLANK(TEXT(StatusAprovacao__c))),
    OR(
        RecordType.DeveloperName = &quot;Distribuidor&quot;,
        RecordType.DeveloperName = &quot;Licitacao_Direta&quot;,
        RecordType.DeveloperName = &quot;Licitacao_Indireta&quot;,
        RecordType.DeveloperName = &quot;OEM&quot;,
        RecordType.DeveloperName = &quot;Purchasing_Group&quot;,
        RecordType.DeveloperName = &quot;VendaDireta&quot;,
        RecordType.DeveloperName = &quot;Samples&quot;
    )
)</errorConditionFormula>
    <errorMessage>Você não pode alterar preços e descontos de uma oportunidade aprovada. Altere o Status da Oportunidade para &quot;Precisa de Aprovação&quot; e altere os valores novamente.</errorMessage>
</ValidationRule>