force-app/main/default/objects/Opportunity/validationRules/DisqualifiedReasonRequiredForLOTs.validationRule-meta.xml
<ValidationRule>
    <fullName>DisqualifiedReasonRequiredForLOTs</fullName>
    <active>true</active>
    <description>Disqualified Reason is required for disqualified LOT.</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Opportunity_EMEA_LOT&apos;
&amp;&amp;
ISPICKVAL(StageName, &apos;Disqualified&apos;)
&amp;&amp;
ISBLANK(Disqualified_Reason__c )</errorConditionFormula>
    <errorDisplayField>Disqualified_Reason__c</errorDisplayField>
    <errorMessage>Disqualified Reason is required for disqualified LOT.</errorMessage>
</ValidationRule>