force-app/main/default/objects/Opportunity/validationRules/Impede_Fases_Oportunidade_filha.validationRule-meta.xml
<ValidationRule>
    <fullName>Impede_Fases_Oportunidade_filha</fullName>
    <active>true</active>
    <description>Só é possível alterar a fase para Empenho quando a oportunidade pai estiver com a fase Resultado.</description>
    <errorConditionFormula>AND( 
    IsChildren__c = TRUE, 
    OR( 
        RecordType.DeveloperName = &quot;SA_Licitacao_Direta&quot;, 
        RecordType.DeveloperName = &quot;SA_Licitacao_Indireta&quot;
    ),
    ISPICKVAL(StageName, &quot;Empenho&quot;), 
    NOT(ISPICKVAL(Oportunidade__r.StageName, &quot;Ganha&quot;)),
    OR(
        RecordType.DeveloperName = &quot;Distribuidor&quot;,
        RecordType.DeveloperName = &quot;Licitacao_Direta&quot;,
        RecordType.DeveloperName = &quot;Licitacao_Indireta&quot;,
        RecordType.DeveloperName = &quot;OEM&quot;,
        RecordType.DeveloperName = &quot;Purchasing_Group&quot;,
        RecordType.DeveloperName = &quot;VendaDireta&quot;,
        RecordType.DeveloperName = &quot;Samples&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Só é possível alterar a fase para Empenho quando a oportunidade pai estiver com a fase Ganha.</errorMessage>
</ValidationRule>