force-app/main/default/objects/Opportunity/validationRules/Impede_Fases_Oportunidade_pai.validationRule-meta.xml
<ValidationRule>
    <fullName>Impede_Fases_Oportunidade_pai</fullName>
    <active>true</active>
    <description>Não é possível a alteração da fase atual para Empenho, OF ou Perdida para os tipo de registros Central de Compras, Licitação Direta ou Licitação Indireta.</description>
    <errorConditionFormula>AND(
    IsChildren__c = FALSE,
    OR(
        RecordType.DeveloperName = &quot;SA_Central_Compras&quot;,
        RecordType.DeveloperName = &quot;SA_Licitacao_Direta&quot;,
        RecordType.DeveloperName = &quot;SA_Licitacao_Indireta&quot;
    ),
    OR(
        ISPICKVAL(StageName, &quot;Empenho&quot;),
        ISPICKVAL(StageName, &quot;OF&quot;),
        ISPICKVAL(StageName, &quot;Perdida&quot;)
    ),
    OR(
        RecordType.DeveloperName = &quot;Distribuidor&quot;,
        RecordType.DeveloperName = &quot;Licitacao_Direta&quot;,
        RecordType.DeveloperName = &quot;Licitacao_Indireta&quot;,
        RecordType.DeveloperName = &quot;OEM&quot;,
        RecordType.DeveloperName = &quot;Purchasing_Group&quot;,
        RecordType.DeveloperName = &quot;VendaDireta&quot;,
        RecordType.DeveloperName = &quot;Samples&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Não é possível a alteração da fase atual para Empenho, OF ou Perdida para os tipo de registros Central de Compras, Licitação Direta ou Licitação Indireta.</errorMessage>
</ValidationRule>