force-app/main/default/objects/Opportunity/validationRules/Key_Info_for_Conversion_Opps.validationRule-meta.xml
<ValidationRule>
    <fullName>Key_Info_for_Conversion_Opps</fullName>
    <active>true</active>
    <errorConditionFormula>(
 (Conversion_Opportunity__c) &amp;&amp; 
 (Probability &gt;= 0.7) &amp;&amp;
(
 (Number_of_Products__c  == 0 ) ||  
 (ISPICKVAL( Frequency__c , &apos;&apos; )) ||  
 (ISBLANK(Target_Convert_Date__c)) 
)
)</errorConditionFormula>
    <errorMessage>Conversion opportunities should have the following information

1.) Products need to be added to Opportunity.
2.) Target Conversion date must be entered.
3.) Frequency for product quantities must be specified.</errorMessage>
</ValidationRule>