force-app/main/default/objects/Opportunity/validationRules/Obrigada_Fase_Pai_Ganha.validationRule-meta.xml
<ValidationRule>
    <fullName>Obrigada_Fase_Pai_Ganha</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Order_Generated__c = TRUE,
    ISCHANGED(StageName),
    OR(
        RecordType.DeveloperName = &quot;Distribuidor&quot;,
        RecordType.DeveloperName = &quot;Licitacao_Direta&quot;,
        RecordType.DeveloperName = &quot;Licitacao_Indireta&quot;,
        RecordType.DeveloperName = &quot;OEM&quot;,
        RecordType.DeveloperName = &quot;Purchasing_Group&quot;,
        RecordType.DeveloperName = &quot;VendaDireta&quot;,
        RecordType.DeveloperName = &quot;Samples&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Não é possível alterar o status da oportunidade após ser marcada como ganha. Caso precise realizar alterações, entre em contato com o administrador.</errorMessage>
</ValidationRule>