force-app/main/default/objects/Opportunity/validationRules/Products_required_for_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Products_required_for_Opportunity</fullName>
    <active>true</active>
    <description>Products required for Opportunity in stages: Forecasting, Closed Won.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Opportunity_NACA&quot;
&amp;&amp;
Number_of_Products__c = 0 
&amp;&amp;
(ISPICKVAL( StageName, &apos;Closed Won&apos;)|| ISPICKVAL( StageName, &apos;Forecasting&apos;))
&amp;&amp;
!Is_this_a_recurring_opportunity__c 
&amp;&amp;
$Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>Starting from Forecasting status, Opportunity must include Products.</errorMessage>
</ValidationRule>