force-app/main/default/objects/Opportunity/validationRules/Reason_Behind_Opp_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Behind_Opp_Lost</fullName>
    <active>true</active>
    <description>If an Opportunity is deemed &quot;Closed Lost&quot; then the &quot;Why We Lost&quot; and &quot;Next Steps&quot; fields are required.</description>
    <errorConditionFormula>AND(
    Region__c &lt;&gt; &quot;Brazil&quot;,
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISBLANK(Why_we_lost__c)
)</errorConditionFormula>
    <errorDisplayField>Why_we_lost__c</errorDisplayField>
    <errorMessage>For lost opportunities, the &quot;Why we lost&quot; field becomes required.</errorMessage>
</ValidationRule>